tests/baselines/reference/parserInterfaceDeclaration3.errors.txt
==== tests/cases/compiler/parserInterfaceDeclaration3.ts (1 errors) ====
    public interface I {
    ~~~~~~
!!! parserInterfaceDeclaration3.ts(1,1): error TS1044: 'public' modifier cannot appear on a module element.
    }